Out z-index fixed for image-cards

--- a/portfolio-style.css
+++ b/portfolio-style.css
@@ -128,6 +128,10 @@ h4 {
     margin: 0 3rem;
   }
 
+  .navigation-back:hover::after {
+    transform: scaleX(0);
+  }
+
   .navigation-pc {
     display: none;
   }
@@ -288,7 +292,13 @@ input[type="checkbox"].toggle:checked + label::after {
   padding: 0;
   height: 200px;
   z-index: 2;
-  transition: transform 0.3s cubic-bezier(.22,.38,.48,.98);
+  transition: transform 0.3s cubic-bezier(.22,.38,.48,.98), z-index 0.3s 0.3s;
+}
+
+.card:hover .image-card {
+  z-index: 4;
+  transform: scale(1.08);
+  transition-delay: 0s, 0s; /* Reset the transition delay */
 }
 
 .image-card:hover {
